Fixed some contrast issues

--- a/styles/scss/partials/_base.scss
+++ b/styles/scss/partials/_base.scss
@@ -689,7 +689,7 @@
 
 	.entry-content {
 
-		a {
+		a:not(.elementor-button-link) {
 			color: var(--primary-accent);
 		}
 	}
