--- a/styles/scss/partials/blog/_comments.scss
+++ b/styles/scss/partials/blog/_comments.scss
@@ -65,7 +65,7 @@
 				font-size: 1.3rem;
 				letter-spacing: 1px;
 				text-transform: uppercase;	
-				color: #95989A;
+				color: var(--comments-notes);
 				border: 0 !important;
 				transition: all 300ms ease-in-out;
 
@@ -80,12 +80,12 @@
 		.comments-desc {
 			// font-family: $primary-font-stack;
 			font-size: 1.8rem;
-			color: #95989a;
+			color: var(--comments-notes);
 		}
 
 	}
 
-	.no-comments { color: #95989A; }
+	.no-comments { color: var(--comments-notes); }
 
 
 /*---------------------------------------------------------
@@ -295,7 +295,7 @@
 			
 			margin-bottom: 30px;
 			a {
-				color: #95989A;
+				color: var(--comments-notes);
 				border-bottom: 1px solid transparent;
 		    	transition: all 300ms linear;
 
@@ -310,7 +310,7 @@
 		.comment-notes {
 			font-size: 1.8rem;
 			margin-bottom: 45px !important;
-			color: #95989A;
+			color: var(--comments-notes);
 		}
 
 		/**  Form Fields */
