--- a/styles/scss/partials/blog/minimal.scss
+++ b/styles/scss/partials/blog/minimal.scss
@@ -172,7 +172,7 @@
 
 body.light-base-color-scheme {
 	.load-more {
-		background: #b7b7b7;
+		background: #a0a0a0;
 		color: #fff;
 	}
 }
