--- a/styles/scss/partials/scaffolding/_misc.scss
+++ b/styles/scss/partials/scaffolding/_misc.scss
@@ -706,7 +706,7 @@
             text-transform: uppercase;
             letter-spacing: 0.5px;
             color: var(--text-color);
-            opacity: 0.5;
+            opacity: 0.6;
 			margin-bottom: 30px;
         }
 
