--- a/styles/scss/partials/scaffolding/inc/_page_header.scss
+++ b/styles/scss/partials/scaffolding/inc/_page_header.scss
@@ -107,7 +107,7 @@
 					margin-bottom: 12px;
 					&.active {
 						a {
-							background: #C4C4C4;
+							background: #d6d6d6;
 							border-radius: 5px;
 							color: #000000;
 							padding: 3px 12px;
