--- a/styles/scss/partials/scaffolding/inc/_primary_menu.scss
+++ b/styles/scss/partials/scaffolding/inc/_primary_menu.scss
@@ -312,7 +312,7 @@
 				text-transform: uppercase;
 				// color: #B2B2B2;
 				color: var(--menu-caption);
-				padding: 11px 14px 3px 14px;
+				padding: 20px 14px 10px 14px;
 				margin: 2px 22px 5px 22px;
 				@include breakpoint($mobile) { display: none !important; }
 			}
